--- a/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.employee.html
@@ -16,8 +16,8 @@
                         <div class="input-group">
                             <input type="text" class="input-sm form-control" placeholder="Search">
                             <span class="input-group-btn">
-            <button class="btn btn-sm btn-default" type="button">搜索</button>
-          </span>
+                                <button class="btn btn-sm btn-default" type="button">搜索</button>
+                            </span>
                         </div>
                     </div>
                 </div>
@@ -29,9 +29,50 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="info in [0,1,2,3,4]">
-                            <td ng-repeat="info in data.tables[0]"></td>
-                        </tr>
+                            <tr ng-repeat="info in sslyzgl_ygxxb">
+                                <td></td><!--人员姓名-->
+                                <td></td><!--人员性别-->
+                                <td></td><!--出生日期-->
+                                <td></td><!--身份证号-->
+                                <td></td><!--民族-->
+                                <td></td><!--籍贯-->
+                                <td></td><!--联系电话-->
+                                <td></td><!--联系地址-->
+                                <td></td><!--电子邮件-->
+                                <td></td><!--邮政编码-->
+                                <td></td><!--文化程度-->
+                                <td></td><!--技术等级-->
+                                <td></td><!--健康状况-->
+                                <td></td><!--从业状态-->
+                                <td></td><!--驾驶证号-->
+                                <td></td><!--准驾车型-->
+                                <td></td><!--驾驶证初领时间-->
+                                <td></td><!--从业资格证号-->
+                                <td></td><!--从业资格类别-->
+                                <td></td><!--核发日期-->
+                                <td></td><!--有效期起-->
+                                <td></td><!--有效期止-->
+                                <td></td><!--证照状态-->
+                                <td></td><!--发证机关-->
+                                <td></td><!--补换证次数-->
+                                <td></td><!--管理机构-->
+                                <td></td><!--资格等级-->
+                                <td></td><!--档案号-->
+                                <td></td><!--考生区域-->
+                                <td></td><!--从业资格范围-->
+                                <td></td><!--时间戳-->
+                                <td></td><!--修改时间-->
+                                <td></td><!--修改日期-->
+                                <td></td><!--修改人-->
+                                <td></td><!--创建时间-->
+                                <td></td><!--创建日期-->
+                                <td></td><!--创建人-->
+                                <td></td><!--是否有效-->
+                                <td></td><!--职位-->
+                                <td></td><!--考核年度-->
+                                <td></td><!--考核等级-->
+                                <td></td><!--考核状态-->
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold == 'n'">
@@ -41,9 +82,30 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="info in [0,1,2,3,4]">
-                            <td ng-repeat="info in data.tables[1]"></td>
-                        </tr>
+                            <tr ng-repeat="info in sslyzgl_xjsjb">
+                                <td></td><!--从业资格证编号-->
+                                <td></td><!--先进事迹发生日期-->
+                                <td></td><!--先进事迹发生时间-->
+                                <td></td><!--当事人-->
+                                <td></td><!--当事人证件号码-->
+                                <td></td><!--联系方式-->
+                                <td></td><!--事迹类型-->
+                                <td></td><!--涉及物品-->
+                                <td></td><!--涉及金额-->
+                                <td></td><!--加分-->
+                                <td></td><!--先进事迹经过-->
+                                <td></td><!--是否有效-->
+                                <td></td><!--创建人-->
+                                <td></td><!--创建日期-->
+                                <td></td><!--创建时间-->
+                                <td></td><!--修改人-->
+                                <td></td><!--修改日期-->
+                                <td></td><!--修改时间-->
+                                <td></td><!--时间戳-->
+                                <td></td><!--从业人员编号-->
+                                <td></td><!--经办人-->
+                                <td></td><!--经办人电话-->
+                            </tr>
                         </tbody>
                     </table>
                     <table class="table table-bordered b-t b-light" style="white-space: nowrap" ng-if="fold == 'o'">
@@ -53,9 +115,28 @@
                         </tr>
                         </thead>
                         <tbody>
-                        <tr ng-repeat="info in [0,1,2,3,4]">
-                            <td ng-repeat="info in data.tables[2]"></td>
-                        </tr>
+                            <tr ng-repeat="info in sslyzgl_sszb">
+                                <td></td><!--申诉号-->
+                                <td></td><!--申诉日期-->
+                                <td></td><!--申诉时间-->
+                                <td></td><!--申报类型-->
+                                <td></td><!--企业实体类型-->
+                                <td></td><!--申诉标题-->
+                                <td></td><!--申诉内容-->
+                                <td></td><!--申诉状态-->
+                                <td></td><!--是否有效-->
+                                <td></td><!--创建人-->
+                                <td></td><!--创建日期-->
+                                <td></td><!--创建时间-->
+                                <td></td><!--修改人-->
+                                <td></td><!--修改日期-->
+                                <td></td><!--修改时间-->
+                                <td></td><!--时间戳-->
+                                <td></td><!--管理机构编码-->
+                                <td></td><!--企业名称-->
+                                <td></td><!--申诉年份-->
+                                <td></td><!--申报状态-->
+                            </tr>
                         </tbody>
                     </table>
                 </div>
@@ -69,13 +150,13 @@
                         </div>
                         <div class="col-sm-4 text-right text-center-xs">
                             <ul class="pagination pagination-sm m-t-none m-b-none">
-                                <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                                <li><a href>1</a></li>
-                                <li><a href>2</a></li>
-                                <li><a href>3</a></li>
-                                <li><a href>4</a></li>
-                                <li><a href>5</a></li>
-                                <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                                <li><a ng-click="prevPage()"><i class="fa fa-chevron-left"></i></a></li>
+                                <li ng-click="pageIndex(pageParam.pageNo)"><a href>{{pageParam.pageNo}}</a></li>
+                                <li ng-click="pageIndex(pageParam.pageNo+1)"><a href>{{pageParam.pageNo+1}}</a></li>
+                                <li ng-click="pageIndex(pageParam.pageNo+2)"><a href>{{pageParam.pageNo+2}}</a></li>
+                                <li ng-click="pageIndex(pageParam.pageNo+3)"><a href>{{pageParam.pageNo+3}}</a></li>
+                                <li ng-click="pageIndex(pageParam.pageNo+4)"><a href>{{pageParam.pageNo+4}}</a></li>
+                                <li><a ng-click="nextPage()"><i class="fa fa-chevron-right"></i></a></li>
                             </ul>
                         </div>
                     </div>
