--- a/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/throughputNextLevel.list.html
@@ -5,7 +5,6 @@
   <div class="wrapper bg-light lter b-b throughput" >
     <div id="myTabContent" class="tab-content" >
       <div class="tab-pane fade in active" id="home">
-
         <div ng-if="fold==''">
           <div class="panel panel-default" >
             <div class="row wrapper">
@@ -16,15 +15,15 @@
               <div class="col-sm-3">
                 <div class="input-group">
                   <span style="line-height: 30px;display: inline-block;margin-left:25px;">港口企业</span>
-                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;">
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;margin-left:30px;float: right;" ng-model="qsbwzkParam.gkqy">
                 </div>
               </div>
               <div class="col-sm-3">
                 <div class="input-group">
                   <span style="line-height: 30px;display: inline-block">码头单位</span>
-                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;">
+                  <input type="text" class="input-sm form-control" placeholder="Search" style="width:90px;float: right;margin-right:15px;" ng-model="qsbwzkParam.mtdw">
                   <span class="input-group-btn">
-                    <button class="btn btn-sm btn-default" type="button">搜索</button>
+                    <button class="btn btn-sm btn-default" type="button" ng-click="searchQsbwzkData()">搜索</button>
                 </span>
                 </div>
               </div>
@@ -52,25 +51,25 @@
               <div class="col-lg-9">
                 <div class="panel-body">
                   <div ui-jq="plot" ui-options="
-              [
-                { data: {{d}}, points: { show: true, radius: 6},splines: { show: true, fill: true, fillColor: { colors: [{ opacity: 0.1 }, { opacity: 0.1}] } }  }
-              ],
-              {
-                colors: ['{{app.color.info}}'],
-                series: { shadowSize: 3 },
-                xaxis:{
-                  font: { color: '#ccc' },
-                  position: 'bottom',
-                  ticks: [
-                    [ 1, '10-23周日' ], [ 2, '10-24周一' ], [ 3, '10-25周二' ], [ 4, '10-6周三' ], [ 5, '10-27周四' ], [ 6, '10-28周五' ], [ 7, '10-28周五' ]
-                  ]
-                },
-                yaxis:{ font: { color: '#ccc' } },
-                grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
-                tooltip: true,
-                tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
-              }
-            " style="height:320px" >
+                        [
+                          { data: {{d}}, points: { show: true, radius: 6},splines: { show: true, fill: true, fillColor: { colors: [{ opacity: 0.1 }, { opacity: 0.1}] } }  }
+                        ],
+                        {
+                          colors: ['{{app.color.info}}'],
+                          series: { shadowSize: 3 },
+                          xaxis:{
+                            font: { color: '#ccc' },
+                            position: 'bottom',
+                            ticks: [
+                              [ 1, '10-23周日' ], [ 2, '10-24周一' ], [ 3, '10-25周二' ], [ 4, '10-6周三' ], [ 5, '10-27周四' ], [ 6, '10-28周五' ], [ 7, '10-28周五' ]
+                            ]
+                          },
+                          yaxis:{ font: { color: '#ccc' } },
+                          grid: { hoverable: true, clickable: true, borderWidth: 0, color: '#ccc' },
+                          tooltip: true,
+                          tooltipOpts: { content: '%x.1 is %y.4',  defaultTheme: false, shifts: { x: 0, y: 20 } }
+                        }
+                      " style="height:320px" >
                   </div>
                 </div>
               </div>
@@ -95,20 +94,18 @@
           <footer class="panel-footer">
             <div class="row">
               <div class="col-sm-4 hidden-xs">
-
               </div>
               <div class="col-sm-4 text-center">
-
               </div>
               <div class="col-sm-4 text-right text-center-xs">
                 <ul class="pagination pagination-sm m-t-none m-b-none">
-                  <li><a href><i class="fa fa-chevron-left"></i></a></li>
-                  <li><a href>1</a></li>
-                  <li><a href>2</a></li>
-                  <li><a href>3</a></li>
-                  <li><a href>4</a></li>
-                  <li><a href>5</a></li>
-                  <li><a href><i class="fa fa-chevron-right"></i></a></li>
+                  <li><a ng-click="prevPage()"><i class="fa fa-chevron-left"></i></a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo)"><a href>{{pageParam.pageNo}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+1)"><a href>{{pageParam.pageNo+1}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+2)"><a href>{{pageParam.pageNo+2}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+3)"><a href>{{pageParam.pageNo+3}}</a></li>
+                  <li ng-click="pageIndex(pageParam.pageNo+4)"><a href>{{pageParam.pageNo+4}}</a></li>
+                  <li><a ng-click="nextPage()"><i class="fa fa-chevron-right"></i></a></li>
                 </ul>
               </div>
             </div>
