--- a/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship1.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/waterwayYunZheng.ship1.html
@@ -32,26 +32,26 @@
               </thead>
               <tbody>
               <tr  ng-repeat="k in sslyzgl_ndsycbjl">
-                <td></td><!--编号-->
-                <td></td><!--船舶记录号-->
-                <td></td><!--船检登记号-->
-                <td></td><!--船名-->
-                <td></td><!--船舶类型-->
-                <td></td><!--经营者名-->
-                <td></td><!--管辖机构-->
-                <td></td><!--航区-->
-                <td></td><!--船舶总吨-->
-                <td></td><!--船舶总载重吨-->
-                <td></td><!--船舶净载重吨-->
-                <td></td><!--箱位数-->
-                <td></td><!--载客量-->
-                <td></td><!--功率-->
-                <td></td><!--年审结论-->
-                <td></td><!--年审合格证号-->
-                <td></td><!--年度审验日期-->
-                <td></td><!--年审合格证有效期限-->
-                <td></td><!--年审合格证打印日期-->
-                <td></td><!--备注-->
+                <td>{{k.serialNo}}</td><!--编号-->
+                <td>{{k.shipcheckno}}</td><!--船舶记录号-->
+                <td>{{k.shipno}}</td><!--船检登记号-->
+                <td>{{k.shipname}}</td><!--船名-->
+                <td>{{k.kindno}}</td><!--船舶类型-->
+                <td>{{k.enterprisename}}</td><!--经营者名-->
+                <td>{{k.unitno}}</td><!--管辖机构-->
+                <td>{{k.voyagearea}}</td><!--航区-->
+                <td>{{k.totalton}}</td><!--船舶总吨-->
+                <td>{{k.totalcarry}}</td><!--船舶总载重吨-->
+                <td>{{k.ton}}</td><!--船舶净载重吨-->
+                <td>{{k.teu}}</td><!--箱位数-->
+                <td>{{k.seat}}</td><!--载客量-->
+                <td>{{k.power}}</td><!--功率-->
+                <td>{{k.yearcheckresult}}</td><!--年审结论-->
+                <td>{{k.yearcheckno}}</td><!--年审合格证号-->
+                <td>{{k.nshgzdate|date:'yyyy-MM-dd'}}</td><!--年度审验日期-->
+                <td>{{k.nshgzenddate|date:'yyyy-MM-dd'}}</td><!--年审合格证有效期限-->
+                <td>{{k.nshgzprintdate|date:'yyyy-MM-dd'}}</td><!--年审合格证打印日期-->
+                <td>{{k.nshgznote}}</td><!--备注-->
               </tr>
               </tbody>
             </table>
@@ -63,24 +63,24 @@
               </thead>
               <tbody>
               <tr  ng-repeat="k in sslyzgl_bgcbjl">
-                <td></td><!--编号-->
-                <td></td><!--船舶记录号-->
-                <td></td><!--船检登记号-->
-                <td></td><!--船舶名称-->
-                <td></td><!--船舶类型-->
-                <td></td><!--船籍港-->
-                <td></td><!--总吨-->
-                <td></td><!--营运证号-->
-                <td></td><!--营运证经营范围-->
-                <td></td><!--营运证最近发证日期-->
-                <td></td><!--船舶经营者-->
-                <td></td><!--船舶所有人-->
-                <td></td><!--管理机构-->
-                <td></td><!--变更日期-->
-                <td></td><!--变更类别-->
-                <td></td><!--注销证号-->
-                <td></td><!--注销登记证打印日期-->
-                <td></td><!--简要说明-->
+                <td>{{k.serialNo}}</td><!--编号-->
+                <td>{{k.shipno}}</td><!--船舶记录号-->
+                <td>{{k.shipcheckno}}</td><!--船检登记号-->
+                <td>{{k.shipname}}</td><!--船舶名称-->
+                <td>{{k.kindno}}</td><!--船舶类型-->
+                <td>{{k.portname}}</td><!--船籍港-->
+                <td>{{k.totalton}}</td><!--总吨-->
+                <td>{{k.yyzno}}</td><!--营运证号-->
+                <td>{{k.yyzrunkind}}</td><!--营运证经营范围-->
+                <td>{{k.createdate}}</td><!--营运证最近发证日期-->
+                <td>{{k.enterprisename}}</td><!--船舶经营者-->
+                <td>{{k.ownername}}</td><!--船舶所有人-->
+                <td>{{k.unitno}}</td><!--管理机构-->
+                <td>{{k.changedate}}</td><!--变更日期-->
+                <td>{{k.changekind}}</td><!--变更类别-->
+                <td>{{k.changeno}}</td><!--注销证号-->
+                <td>{{k.zxdjzprintdate}}</td><!--注销登记证打印日期-->
+                <td>{{k.changenote}}</td><!--简要说明-->
               </tr>
               </tbody>
             </table>
