--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/header.html
@@ -1,7 +1,7 @@
 <!-- navbar header -->
-<div class="navbar-header {{app.settings.navbarHeaderColor}}" style="width: 45%">
+<div class="navbar-header {{app.settings.navbarHeaderColor}}" >
   <!-- brand -->
-  <a class="navbar-brand text-lt">
+  <a class="navbar-brand text-lt" style="font-size: 17px;">
     <i class="fa fa-btc"></i>
     <img src="img/logo.png" alt="." class="hide">
     <span class="hidden-folded m-l-xs">{{app.name}}</span>
