nav 省交通运输统计分析监测

--- a/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/blocks/nav.html
@@ -1,12 +1,12 @@
 <!-- list -->
-<ul class="nav">
+<ul class="nav" style="background: #">
   <li class="hidden-folded padder m-t m-b-sm text-muted text-xs">
     <span translate="aside.nav.HEADER">Navigation</span>
   </li>
   <li ng-if="checkIfContain('sjtystjfxjc')">
     <a href class="auto" ui-sref="app.sjtystjfxjc">
       <i class="glyphicon glyphicon-stats icon text-primary-dker"></i>
-      <span class="font-bold" translate="aside.nav.DASHBOARD">省交通运输统计分析监测</span>
+      <span class="font-bold" translate="aside.nav.DASHBOARD">省交通运输统计分析监测<br>与投资计划管理</span>
     </a>
   </li>
   <li ng-if="checkIfContain('sdlyssjxtgl')">
@@ -36,14 +36,14 @@
   <li ng-if="checkIfContain('hnsglsljsyysscxxfwxt')">
     <a href class="auto" ui-sref="app.hunan_transport">
       <i class="glyphicon glyphicon-th"></i>
-      <span>湖南省公路水路建设与运输市场信息服务系统</span>
+      <span>湖南省公路水路建设与<br>运输市场信息服务系统</span>
     </a>
   </li>
   <li ng-if="checkIfContain('hnsgkqyymtdwttlbb')">
     <a href class="auto" ui-sref="app.throughput">
       <b class="badge bg-info pull-right">3</b>
       <i class="glyphicon glyphicon-th"></i>
-      <span>湖南省港口企业与码头单位吞吐量报表</span>
+      <span>湖南省港口企业<br>与码头单位吞吐量报表</span>
     </a>
   </li>
   <li ng-if="checkIfContain('syaisxt')">
