--- a/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.vehicle.html
+++ b/beauty-project2/tra/src/main/webapp/tpl/tra/hunan_information_service.vehicle.html
@@ -29,33 +29,33 @@
                         </thead>
                         <tbody>
                         <tr ng-repeat="info in sslyzgl_jtzrsgb">
-                            <td></td><!--序号-->
-                            <td></td><!--事故编号-->
-                            <td></td><!--车辆编码-->
-                            <td></td><!--车牌号码-->
-                            <td></td><!--从业资格证号码-->
-                            <td></td><!--驾驶员姓名-->
-                            <td></td><!--事故日期-->
-                            <td></td><!--事故时间-->
-                            <td></td><!--事故地点-->
-                            <td></td><!--死亡人数-->
+                            <td>{{info.serialNo}}</td><!--序号-->
+                            <td>{{info.accidentId}}</td><!--事故编号-->
+                            <td>{{info.cardno}}</td><!--车辆编码-->
+                            <td>{{info.branum}}</td><!--车牌号码-->
+                            <td>{{info.creusrcode}}</td><!--从业资格证号码-->
+                            <td>{{info.drivername}}</td><!--驾驶员姓名-->
+                            <td>{{info.accDate}}</td><!--事故日期-->
+                            <td>{{info.accTime}}</td><!--事故时间-->
+                            <td>{{info.accPlace}}</td><!--事故地点-->
+                            <td>{{info.death}}</td><!--死亡人数-->
                             <td></td><!--车牌颜色-->
                             <td></td><!--从业人员编号-->
                             <td></td><!--身份证号码-->
-                            <td></td><!--事故原因-->
+                            <td>{{info.accReason}}</td><!--事故原因-->
                             <td></td><!--事故情况-->
-                            <td></td><!--记录人-->
-                            <td></td><!--直接经济损失-->
-                            <td></td><!--事故责任与性质-->
+                            <td>{{info.recorder}}</td><!--记录人-->
+                            <td>{{info.alllostmoney}}</td><!--直接经济损失-->
+                            <td>{{info.accDetail}}</td><!--事故责任与性质-->
                             <td></td><!--修改日期-->
                             <td></td><!--修改时间-->
-                            <td></td><!--审核状态-->
-                            <td></td><!--审核意见-->
+                            <td>{{info.auditStatus}}</td><!--审核状态-->
+                            <td>{{info.auditContent}}</td><!--审核意见-->
                             <td></td><!--从业资格证号-->
                             <td></td><!--人员扣分-->
-                            <td></td><!--审核机构-->
-                            <td></td><!--审核人-->
-                            <td></td><!--审核时间-->
+                            <td>{{info.auditDep}}</td><!--审核机构-->
+                            <td>{{info.auditUsr}}</td><!--审核人-->
+                            <td>{{info.credate}}</td><!--审核时间-->
                             <td></td><!--信用信息来源-->
                         </tr>
                         </tbody>
